--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/activity_main.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <TextView
         android:id="@+id/tv_title"
-        style="@style/TextAppearance.AppCompat.Body2"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/title"
-        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,139 +36,135 @@
         app:layout_constraintStart_toEndOf="@id/tv_cars"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-    <ImageView
-        android:id="@+id/iv_car"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/eletric_car"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_cars" />
-
-    <TextView
-        android:id="@+id/tv_preco"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/preco"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_car" />
-
-    <TextView
-        android:id="@+id/tv_preco_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="RS $ 120.000,00"
-        app:layout_constraintStart_toEndOf="@id/tv_preco"
-        app:layout_constraintTop_toBottomOf="@id/iv_car" />
-
-    <TextView
-        android:id="@+id/tv_bateria"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/bateria"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_preco" />
-
-    <TextView
-        android:id="@+id/tv_bateria_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="300 Kwh"
-        app:layout_constraintStart_toEndOf="@id/tv_bateria"
-        app:layout_constraintTop_toBottomOf="@id/tv_preco" />
-
-    <TextView
-        android:id="@+id/tv_potencia"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/potencia"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />
-
-    <TextView
-        android:id="@+id/tv_potencia_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="RS $ 120.000,00"
-        app:layout_constraintStart_toEndOf="@id/tv_potencia"
-        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />
-
-    <TextView
-        android:id="@+id/tv_recarga"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="@string/recarga"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />
-
-    <TextView
-        android:id="@+id/tv_recarga_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="RS $ 120.000,00"
-        app:layout_constraintStart_toEndOf="@id/tv_recarga"
-        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />
-
-    <EditText
-        android:id="@+id/et_preco_kwh"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_car"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:ems="10"
-        android:hint="@string/preco_kwh"
-        android:inputType="numberDecimal"
-        android:maxLength="10"
+        android:elevation="24dp"
+        app:cardBackgroundColor="@color/gray"
+        app:cardCornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_recarga_value"
-        android:autofillHints="A" />
+        app:layout_constraintTop_toBottomOf="@id/tv_favorites">
 
-    <EditText
-        android:id="@+id/et_km_percorrido"
-        android:maxLength="10"
-        android:inputType="numberDecimal"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_card_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="16dp">
+
+            <ImageView
+                android:id="@+id/iv_car"
+                android:layout_width="250dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/eletric_car"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_preco"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/preco"
+                app:layout_constraintStart_toStartOf="@id/iv_car"
+                app:layout_constraintTop_toBottomOf="@id/iv_car" />
+
+            <TextView
+                android:id="@+id/tv_preco_value"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="RS $ 120.000,00"
+                app:layout_constraintStart_toEndOf="@id/tv_preco"
+                app:layout_constraintTop_toBottomOf="@id/iv_car" />
+
+            <TextView
+                android:id="@+id/tv_bateria"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/bateria"
+                app:layout_constraintStart_toStartOf="@id/iv_car"
+                app:layout_constraintTop_toBottomOf="@id/tv_preco" />
+
+            <TextView
+                android:id="@+id/tv_bateria_value"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="300 Kwh"
+                app:layout_constraintStart_toEndOf="@id/tv_bateria"
+                app:layout_constraintTop_toBottomOf="@id/tv_preco" />
+
+            <TextView
+                android:id="@+id/tv_potencia"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/potencia"
+                app:layout_constraintStart_toStartOf="@id/iv_car"
+                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />
+
+            <TextView
+                android:id="@+id/tv_potencia_value"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="RS $ 120.000,00"
+                app:layout_constraintStart_toEndOf="@id/tv_potencia"
+                app:layout_constraintTop_toBottomOf="@id/tv_bateria" />
+
+            <TextView
+                android:id="@+id/tv_recarga"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/recarga"
+                app:layout_constraintStart_toStartOf="@id/iv_car"
+                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />
+
+            <TextView
+                android:id="@+id/tv_recarga_value"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="RS $ 120.000,00"
+                app:layout_constraintStart_toEndOf="@id/tv_recarga"
+                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <ListView
+        android:id="@+id/lv_informacoes"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:hint="@string/km_percorrido"
-        app:layout_constraintEnd_toEndOf="@id/et_preco_kwh"
-        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
-        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
-        android:autofillHints="A" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_car"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_calcular"/>
 
     <Button
-        android:layout_marginTop="4dp"
-        android:backgroundTint="@color/green"
         android:id="@+id/btn_calcular"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/green"
         android:text="@string/calcular"
-        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
-        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
-        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido" />
-
-    <TextView
-        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/tv_resultado"
-        android:layout_width="wrap_content"
-        android:text="Resultado"
-        android:textColor="@color/primary_700"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
