--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/values/colors.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#00C800</color>
-    <color name="gray">#E1E1E1</color>
+    <color name="blue_clean">#CFE3EF</color>
 </resources>
