--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/carro_item.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/carro_item.xml
@@ -24,6 +24,16 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/iv_favorite"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_star"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:contentDescription="@string/cd_favorite" />
+
+            <ImageView
                 android:id="@+id/iv_car"
                 android:layout_width="250dp"
                 android:layout_height="100dp"
