--- a/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/carro_item.xml
+++ b/main/desafios-de-projeto/EletricCar/app/src/main/res/layout/carro_item.xml
@@ -27,6 +27,9 @@
                 android:id="@+id/iv_favorite"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_margin="16dp"
                 android:src="@drawable/ic_star"
                 app:layout_constraintTop_toTopOf="parent"
