--- a/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/layout/activity_main.xml
+++ b/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,22 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cd_bottom_sheets"
+        android:layout_width="match_parent"
+        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:backgroundTint="@color/design_default_color_primary"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Bottom Sheets"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/cd_text_fields"
         android:backgroundTint="@color/design_default_color_primary"
         android:layout_width="match_parent"
