Finaliza aula de Bottom App Bars e Snackbars

--- a/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/layout/activity_top_app_bar.xml
+++ b/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/layout/activity_top_app_bar.xml
@@ -6,16 +6,29 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="160dp">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            app:menu="@menu/top_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:navigationIcon="@drawable/ic_menu_24dp"
-            app:title="Page"
-            android:layout_height="?actionBarSize" />
+            app:expandedTitleMarginStart="72dp"
+            app:expandedTitleMarginBottom="28dp"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
+            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+
+                android:layout_width="match_parent"
+                app:menu="@menu/top_app_bar"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                app:navigationIcon="@drawable/ic_menu_24dp"
+                app:title="Page"
+                android:layout_height="?actionBarSize" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <!-- Note: A RecyclerView can also be used -->
@@ -23,6 +36,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Qualquer coisa"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Qualquer coisa 2"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Qualquer coisa 3"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"/>
+
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
