--- a/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/values/themes.xml
+++ b/main/desafios-de-projeto/MaterialDesignEstudo/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="TextAppearance.App.CollapsingToolbar.Expanded" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">#03A9F4</item>
+        <item name="android:textSize">48sp</item>
+    </style>
+    <style name="TextAppearance.App.CollapsingToolbar.Collapsed" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+    </style>
 </resources>
